# calibcamlib

./: .gitignore  README.md  Untitled.ipynb  pyproject.toml  setup.py
calibcamlib/: .helper.py.kate-swp  __init__.py  board.py  camera.py  camerasystem.py  detection.py  dist_MaEtAl2003_model0.py  dist_MaEtAl2003_model3.py  dist_OpenCV.py  helper.py  yaml_helper.py
test/: test_camera.py  test_camerasystem.py  test_distortion.py  test_helper.py
test/data/: camera_test_roundtrip.npy  camera_test_sensor_to_space.npy  camera_test_space_to_sensor.npy  distortion_test_distort.npy  distortion_test_distort_inverse.npy  distortion_test_distort_roundtrip.npy  distortion_test_distort_roundtrip_tangential.npy  sample_calibration.yml
