[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bbo-calibcamlib"
dynamic = ["version"]
description = "Library to work with calibration from bbo-calibcam"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    { name = "BBO-lab @ caesar", email = "kay-michael.voit@caesar.de" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "numpy",
    "pyyaml",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/bbo-lab/calibcamlib"

[tool.hatch.version]
path = "calibcamlib/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/calibcamlib",
]

[tool.hatch.build.targets.wheel]
      packages = ["calibcamlib"]
